--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-linechart": "^1.1.12",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "reaviz": "^13.1.14",
     "web-vitals": "^2.1.4"
   },
